<resources>
    <string name="_1x">1X</string>
    <string name="_item_differences">%s ítems diferentes</string>
    <string name="_product_differences">%s diferencias de productos</string>
    <string name="_quantity_differences">%s diferencias de cantidad</string>
    <string name="_total_counted">%s total contado</string>
    <string name="accept">Aceptar</string>
    <string name="action_settings">Configuración</string>
    <string name="added">Agregado</string>
    <string name="added_plural">Agregados</string>
    <string name="reception_control">Control de recepción</string>
    <string name="error_when_deleting_counts">Error al eliminar el arqueo.</string>
    <string name="error_when_deleting_counts_file_not_found">Error al eliminar el arqueo. Archivo no encontrado.
    </string>
    <string name="an_error_occurred_while_deleting_counts">Ha ocurrido un error al eliminar los arqueos</string>
    <string name="an_error_occurred_while_requesting_new_counts">Ha ocurrido un error al solicitar nuevos arqueos
    </string>
    <string name="an_error_occurred_while_trying_to_add_the_item">Ha ocurrido un error al intentar agregar el ítem
    </string>
    <string name="an_error_occurred_while_trying_to_add_the_item_code">Ha ocurrido un error al intentar agregar el
        código de ítem
    </string>
    <string name="an_error_occurred_while_trying_to_delete_the_count">Ha ocurrido un error al intentar eliminar el
        arqueo
    </string>
    <string name="an_error_occurred_while_trying_to_reset_the_count">Ha ocurrido un error al intentar reiniciar el
        arqueo
    </string>
    <string name="an_error_occurred_while_trying_to_load_the_order">Ha ocurrido un error al intentar cargar el arqueo
    </string>
    <string name="an_error_occurred_while_trying_to_save_the_count">Ha ocurrido un error al intentar guardar el arqueo
    </string>
    <string name="an_error_occurred_while_updating_item_codes">Ha ocurrido un error al actualizar los códigos de ítems
    </string>
    <string name="an_error_occurred_while_updating_the_description_of_the_item_in_the_database">Ha ocurrido un error al
        actualizar la descripción del ítem en la base de datos
    </string>
    <string name="app_configuration">Configuración de la aplicación</string>
    <string name="app_milestone">Milestone12</string>
    <string name="app_name">WarehouseCounter</string>
    <string name="app_panel_url_can_not_be_obtained">No se puede obtener la URL del panel de la aplicación</string>
    <string name="auto_configuration">Configuración automática</string>
    <string name="barcode_failure">No se ha capturado ningún código de barras</string>
    <string name="barcode_reader_not_initialized">Lector de códigos no inicializado</string>
    <string name="barcode_success">Código de barras leído con éxito</string>
    <string name="bluetooth_printer">Impresora Bluetooth</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="cancel">Cancelar</string>
    <string name="cancel_count">Cancelar arqueo</string>
    <string name="cannot_write_to_external_storage">No se puede escribir en el almacenamiento externo</string>
    <string name="app_dont_have_necessary_permissions">La aplicación no tiene los permisos necesarios</string>
    <string name="category">Categoría</string>
    <string name="client">Cliente</string>
    <string name="client_description">Cliente: %1$s %2$s Descripción: %3$s</string>
    <string name="client_has_no_software_packages">El cliente no tiene paquetes de software</string>
    <string name="closing_connection">Cerrando conexión…</string>
    <string name="code">Código</string>
    <string name="code_link">Vincular códigos</string>
    <string name="code_read">Lectura de códigos</string>
    <string name="collapse_panel">Colapsar panel</string>
    <string name="collector_type">Tipo de colector</string>
    <string name="completed">Completado</string>
    <string name="completed_counts">Arqueos completados</string>
    <string name="configuration">Configuración</string>
    <string name="configuration_access">Acceso a la configuración</string>
    <string name="configuration_applied">Configuración aplicada</string>
    <string name="configuration_not_loaded">Configuración no cargada</string>
    <string name="configuration_qr_code">Código QR de configuración</string>
    <string name="configure_proxy_question">¿Configurar proxy?</string>
    <string name="confirm">Confirmar</string>
    <string name="confirm_count">Confirmar arqueo</string>
    <string name="connection_error">Error de conexión</string>
    <string name="connection_success">Conexión OK</string>
    <string name="continue_">Continuar…</string>
    <string name="copy_ok">Copia OK</string>
    <string name="copying_database">Copiando base de datos…</string>
    <string name="count">Arqueo</string>
    <string name="count_log">Registro de conteo</string>
    <string name="count_select">Seleccionar arqueo</string>
    <string name="count_without_description">Arqueo sin descripción</string>
    <string name="counted">contado</string>
    <string name="counted_plural">contados</string>
    <string name="creation_date">Creado</string>
    <string name="app_logo">App logo</string>
    <string name="database_is_not_created_yet">La base de datos aún no fue creada</string>
    <string name="database_name_is_invalid">Nombre inválido de la base de datos</string>
    <string name="take_off">Quitar</string>
    <string name="delete">Eliminar</string>
    <string name="delivery_control">Control de despacho</string>
    <string name="description">Descripción</string>
    <string name="description_or_count_area">Descripción o área de arqueo</string>
    <string name="destination">Destino</string>
    <string name="destination_already_exists">Destino ya existe</string>
    <string name="device">Dispositivo</string>
    <string name="device_configuration">Configuración de dispositivos de lectura, escritura e impresión</string>
    <string name="device_name_or_mac_address">Nombre o MAC Address del dispositivo</string>
    <string name="differences_exist">Existen diferencias</string>
    <string name="disabled">Deshabilitado</string>
    <string name="divider">Divisor</string>
    <string name="divider_locked">Divisor bloqueado</string>
    <string name="division_char">Carácter de división de códigos</string>
    <string name="do_you_want_to_delete_or_reset_the_selected_counts">¿Desea eliminar o reiniciar los arqueos
        seleccionados?
    </string>
    <string name="do_you_want_to_delete_the_old_error_logs_question">¿Desea eliminar los registros de errores
        antiguos?
    </string>
    <string name="do_you_want_to_delete_the_selected_count">¿Desea eliminar el arqueo seleccionado?</string>
    <string name="do_you_want_to_delete_the_selected_counts">¿Desea eliminar los arqueos seleccionados?</string>
    <string name="do_you_want_to_remove_the_item">¿Desea quitar el ítem %s?</string>
    <string name="do_you_want_to_remove_the_items">¿Desea quitar los ítem %s?</string>
    <string name="do_you_want_to_reset_the_selected_count">¿Desea reiniciar el arqueo seleccionado?</string>
    <string name="do_you_want_to_reset_the_selected_counts">¿Desea reiniciar los arqueos seleccionados?</string>
    <string name="do_you_want_to_send_the_item_code">¿Desea enviar el código de ítem?</string>
    <string name="do_you_want_to_send_the_item_codes">¿Desea enviar los códigos de ítems?</string>
    <string name="do_you_want_to_send_the_selected_count">¿Desea enviar el arqueo seleccionado?</string>
    <string name="do_you_want_to_send_the_selected_counts">¿Desea enviar los arqueos seleccionados?</string>
    <string name="download_canceled">Descarga cancelada</string>
    <string name="download_error">Error en la descarga</string>
    <string name="download_ok">Descarga correcta</string>
    <string name="downloading">Descargando</string>
    <string name="ean">Ean</string>
    <string name="edit_description">Editar descripción</string>
    <string name="edit_description_icon">Ícono editar descripción</string>
    <string name="edit_qty_icon">Ícono editar cantidades</string>
    <string name="email">Correo electrónico</string>
    <string name="enabled">Habilitado</string>
    <string name="enter_description">Ingresar descripción</string>
    <string name="enter_password">Ingresar contraseña</string>
    <string name="enter_qty">Ingrese cantidad</string>
    <string name="enter_the_code">Ingrese el código</string>
    <string name="entering_the_system">Ingresando al sistema…</string>
    <string name="error">Error</string>
    <string name="error_attempting_to_add_item_to_database">Error al intentar agregar el ítem en la base de datos
    </string>
    <string name="error_connecting_device">Error al conectarse al dispositivo</string>
    <string name="error_connecting_to">Error al conectar a</string>
    <string name="error_copying_database">Error al copiar la base de datos</string>
    <string name="error_downloading_the_database">Error al descargar la base de datos</string>
    <string name="error_downloading_the_database_from_the_server">Error al descargar la base de datos desde el
        servidor
    </string>
    <string name="error_external_storage_not_available_for_reading_or_writing">Error, almacenamiento externo no
        disponible para lectura/escritura
    </string>
    <string name="error_log">Registro de errores</string>
    <string name="error_registry">Registro de errores</string>
    <string name="error_trying_to_send_item_codes">Error al intentar enviar los códigos de ítems</string>
    <string name="exception_error">Error de excepción</string>
    <string name="exception_when_downloading">Excepción al descargar</string>
    <string name="expand_panel">Expandir panel</string>
    <string name="external_id">Id externo</string>
    <string name="failed_to_get_the_date_from_the_file">Error al obtener la fecha desde el archivo</string>
    <string name="failed_to_get_the_db_creation_date_from_the_server">Error al obtener la fecha de creación de la base
        de datos en el servidor
    </string>
    <string name="file_length">Largo del archivo</string>
    <string name="filename">Nombre de archivo</string>
    <string name="find_item">Buscar ítem</string>
    <string name="finish">Terminar</string>
    <string name="finish_date">Finalizado</string>
    <string name="generate_configuration_qr_code">Generar código QR de configuración</string>
    <string name="hex_value">Valor hexadecimal</string>
    <string name="id">Id</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Ingresar</string>
    <string name="title_activity_login">Ingresar</string>
    <string name="user">Usuario</string>
    <string name="version">Version</string>
    <string name="camera_preview">Vista de cámara</string>
    <string name="close">Cerrar</string>
    <string name="continuous_mode">Modo continuo</string>
    <string name="flash_off">Flash apagado</string>
    <string name="touch_the_image_to_start_reading">Toque la imagen para iniciar la lectura</string>
    <string name="filter_repeated_reads">Filtrar lecturas repetidas</string>
    <string name="restore_window">Restaurar ventana</string>
    <string name="_0_items">%s items</string>
    <string name="_0_categories">%s categorías</string>
    <string name="_0_clients">%s clientes</string>
    <string name="_0_item_codes">%s códigos</string>
    <string name="_0_item_regexs">%s Regex</string>
    <string name="_0_lots">%s lotes</string>
    <string name="_0_users">%s usuarios</string>
    <string name="database_status">Estado de la base de datos</string>
</resources>