<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/rlContent"
                                                   android:layout_width="350dp"
                                                   android:layout_height="185dp"
                                                   android:background="@drawable/floating_camera_layout"
                                                   android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/barcodeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/camera_preview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:zxing_preview_scaling_strategy="centerCrop"
            app:zxing_use_texture_view="true">

    </com.journeyapps.barcodescanner.DecoratedBarcodeView>

    <ImageView
            android:id="@+id/barcodePreview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/floating_camera_preview_layout"
            android:contentDescription="@string/camera_preview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"/>

    <ImageView
            android:id="@+id/ivClose"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/close"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_black"
            app:tint="@color/deepskyblue"/>

    <ImageView
            android:id="@+id/ivScanMode"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/continuous_mode"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivClose"
            app:srcCompat="@drawable/ic_multi_barcode_scan"
            app:tint="@color/deepskyblue"/>

    <ImageView
            android:id="@+id/ivFilterRepeat"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/filter_repeated_reads"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivScanMode"
            app:srcCompat="@drawable/ic_filter_on"
            app:tint="@color/deepskyblue"/>

    <ImageView
            android:id="@+id/ivTorch"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/flash_off"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivFilterRepeat"
            app:srcCompat="@drawable/ic_flash_off"
            app:tint="@color/deepskyblue"/>

    <com.dacosys.warehouseCounter.ui.views.ScaleImageView
            android:id="@+id/ivScale"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:padding="8dp"
            android:src="@drawable/ic_resize"
            android:tint="@color/goldenrod"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/lastCodeScanned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/ivClose"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:text="@string/code"
            android:textColor="@color/goldenrod"
            app:layout_constraintEnd_toStartOf="@+id/ivRestoreWindow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/messageTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/touch_the_image_to_start_reading"
            android:textColor="@color/gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"/>

    <ImageView
            android:id="@+id/ivRestoreWindow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/restore_window"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@+id/ivClose"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_restore_window"
            app:tint="@color/deepskyblue"/>

</androidx.constraintlayout.widget.ConstraintLayout>
