<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/login"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:clickable="true"
                                                   android:elevation="1dp"
                                                   android:focusable="true"
                                                   android:focusableInTouchMode="true"
                                                   android:gravity="center_horizontal"
                                                   android:orientation="vertical"
                                                   app:passwordToggleEnabled="true"
                                                   tools:context="com.dacosys.warehouseCounter.ui.activities.main.LoginActivity"
                                                   tools:layout_editor_absoluteX="0dp"
                                                   tools:layout_editor_absoluteY="81dp">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_appbar"
            style="@style/MyActionBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_login"
            app:title="@string/title_activity_login"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/headerLayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_appbar">

        <TextView
                android:id="@+id/versionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/version"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>
        <TextView
                android:id="@+id/clientTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/version"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/versionTextView" android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="#FFCC33"
                android:contentDescription="@string/dacosys_logo"
                app:srcCompat="@drawable/wc" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/userLayout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/loginImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/rounded_corner_button_seagreen"
                android:clickable="true"
                android:contentDescription="@string/sign_in"
                android:elevation="1dp"
                android:focusable="true"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout"
                app:srcCompat="@drawable/ic_check"
                app:tint="@color/cornsilk"/>

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout" android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.fragment.app.FragmentContainerView
                android:id="@+id/userSpinnerFragment"
                android:name="com.dacosys.warehouseCounter.ui.fragments.user.UserSpinnerFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout="@layout/fragment_spinner"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toStartOf="@+id/loginImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/userSpinnerFragment">

            <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:labelFor="@+id/passwordEditText"
                    android:maxLines="1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userSpinnerFragment"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressBarLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/beige"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/syncPercentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="@+id/progressBar"/>

        <TextView
                android:id="@+id/syncStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entering_the_system"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"/>

        <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/dbInfoLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" android:layout_marginBottom="4dp"
            android:background="@drawable/layout_thin_border_stock_audit_from_device" android:visibility="visible">

        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guidelineDbInfoCenter"/>
        <TextView
                android:id="@+id/dbItemsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_items"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDbInfoCenter"/>
        <TextView
                android:id="@+id/dbCategoriesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_categories"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/guidelineDbInfoCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:id="@+id/dbClientsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_clients"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dbCategoriesTextView"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDbInfoCenter"/>
        <TextView
                android:id="@+id/dbItemCodesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_item_codes"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/guidelineDbInfoCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dbCategoriesTextView"/>
        <TextView
                android:id="@+id/dbItemRegexTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_item_regexs"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dbItemCodesTextView"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDbInfoCenter"/>
        <TextView
                android:id="@+id/dbLotTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_lots"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/guidelineDbInfoCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dbItemCodesTextView"/>
        <TextView
                android:id="@+id/dbUserTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0_users"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dbLotTextView"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDbInfoCenter"/>
        <TextView
                android:id="@+id/dbStatusLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/database_status"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dbUserTextView"
                app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
